feat: Add a user service and swagger documentation for it
